--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amplify-forum",
+  "name": "graphql-tutorial",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Bernese-Corgi/GraphQL-Amplify-Practice/issues"
   },
-  "homepage": "https://github.com/Bernese-Corgi/GraphQL-Amplify-Practice#readme"
+  "homepage": "https://github.com/Bernese-Corgi/GraphQL-Amplify-Practice#readme",
+  "dependencies": {
+    "convert-csv-to-json": "^1.3.3"
+  }
 }
