--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "graphql-tutorial",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "database.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/Bernese-Corgi/GraphQL-Amplify-Practice#readme",
   "dependencies": {
-    "convert-csv-to-json": "^1.3.3"
+    "apollo-server": "^3.8.2",
+    "convert-csv-to-json": "^1.3.3",
+    "graphql": "^16.5.0",
+    "nodemon": "^2.0.16"
   }
 }
